[package]
name = "mqtt-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24.0"
yaml-rust2 = "0.8"
json = "0.12.4"
jq-rs = { version = "0.4.1", features = [ "bundled" ] }
serde = "1.0.204"
serde_json = "1.0.120"
serde_yml = "0.0.11"
bytes = "1.7.1"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
log = "0.4.22"
colog = "1.3.0"